elastic/install/05-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: es-svc # Headless service for StatefulSet discovery
  namespace: elastic
  labels:
    app: elasticsearch
spec:
  publishNotReadyAddresses: true 
  ports:
  - port: 9200
    name: http
    targetPort: 9200
  - port: 9300
    name: transport
    targetPort: 9300
  clusterIP: None # This makes it a headless service
  selector:
    app: elasticsearch
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-client # Service for client access
  namespace: elastic
  labels:
    app: elasticsearch
spec:
  type: ClusterIP # Exposes the service on an internal IP in the cluster
  ports:
  - port: 9200
    # name: http
    targetPort: 9200
  selector:
    app: elasticsearch
